test/sh/error/misc/no_nested_export.sk
inner() {
	export outer() {
		# this will fail
	}
}